--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,9 +1,44 @@
+:root {
+  --branding-color: #6c63ff;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+  --secondary-color: #f9f7fe;
+}
 body {
+  font-family: var(--default-font-family);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font-family);
+  font-weight: bold;
 }
 h1 {
-  font-family: "Playfair Display", serif;
-  color: red;
+  font-size: 96px;
 }
-p {
+.hero {
+  background-color: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+.hero p {
+  font-family: var(--default-font-family);
+  font-size: 36px;
+}
+.hero h2 {
   font-family: "Poppins", sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  color: #272142;
+}
+.btn-branding {
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 12px 20px;
 }
