--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -19,6 +19,14 @@ h6 {
 h1 {
   font-size: 96px;
 }
+h2 {
+  font-size: 64px;
+}
+p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1;
+}
 .hero {
   background-color: var(--secondary-color);
   text-align: center;
@@ -36,9 +44,33 @@ h1 {
 }
 .btn-branding {
   background: var(--branding-color);
-  border-radius: 4px;
+  border-radius: 1px solid var(--branding-color);
   color: white;
   font-size: 18px;
   line-height: 27px;
   padding: 12px 20px;
+}
+.btn-branding-outline {
+  border-radius: 4px;
+  border: 1px solid var(--branding-color);
+  color: var(--branding-color);
+  font-size: 18px;
+  line-height: 27px;
+  padding: 12px 20px;
+}
+@media (max-width: 767px) {
+  .project-description {
+    padding: 10px 10px;
+    text-align: center;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
+  h1 {
+    font-size: 40px;
+    line-height: 2;
+  }
+  h2 {
+    font-size: 30px;
+  }
 }
