Added About Page

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,6 +22,19 @@ h1 {
 h2 {
   font-size: 64px;
 }
+.about-section {
+  padding: 160px 20px;
+}
+.about-section h1 {
+  font-size: 44px;
+}
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+.about-section-content {
+  margin: 30px;
+}
 p {
   font-weight: normal;
   font-size: 16px;
@@ -43,8 +56,9 @@ p {
   color: #272142;
 }
 .btn-branding {
+  border-radius: 4px;
   background: var(--branding-color);
-  border-radius: 1px solid var(--branding-color);
+  border: 1px solid var(--branding-color);
   color: white;
   font-size: 18px;
   line-height: 27px;
@@ -72,5 +86,9 @@ p {
   }
   h2 {
     font-size: 30px;
+  }
+  .about-section {
+    text-align: center;
+    padding: 0;
   }
 }
