--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,18 +22,28 @@ h1 {
 h2 {
   font-size: 64px;
 }
-.about-section {
+.content {
   padding: 160px 20px;
 }
-.about-section h1 {
+.content h1 {
   font-size: 44px;
 }
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
-.about-section-content {
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  margin: 20px 0;
+  font-family: var(--default-font-family);
+}
+.content {
   margin: 30px;
+}
+.content p {
+  font-size: 14px;
+  margin: 0;
 }
 p {
   font-weight: normal;
@@ -87,7 +97,7 @@ p {
   h2 {
     font-size: 30px;
   }
-  .about-section {
+  .content {
     text-align: center;
     padding: 0;
   }
