--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -82,6 +82,31 @@ p {
   line-height: 27px;
   padding: 12px 20px;
 }
+nav {
+  padding: 40px;
+}
+.logo {
+  height: 80px;
+  width: 80px;
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 75px;
+  margin-left: 10px;
+}
+nav a {
+  text-decoration: none;
+  color: black;
+}
+nav a:hover {
+  color: var(--branding-color);
+  transition: all 150ms ease-in-out;
+}
 @media (max-width: 767px) {
   .project-description {
     padding: 10px 10px;
