--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -26,8 +26,8 @@ h4 {
   font-size: 48px;
   padding: 0;
 }
-.content {
-  padding: 160px 20px;
+.content-container {
+  padding: 20px;
 }
 .content h1 {
   font-size: 44px;
@@ -143,7 +143,7 @@ footer .social-link a:hover {
     text-align: center;
   }
   .hero {
-    padding: 80px 20px;
+    padding: 20px;
   }
   h1 {
     font-size: 40px;
